styles.css
/** global element styling **/

@import 'https://fonts.googleapis.com/css2?family=Honk&display=swap', 'https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap';

h1 {
  font-family: 'Honk', sans-serif; 
  font-size: 5rem;
  padding: 0px 5px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

h2 {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 2.5rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

body {
  font-family: sans-serif;
  background-color: #fcfbf7; 
}

a {
  color: #000;
  text-decoration: none;
}

li {
  list-style: none;
}

header {
  position: relative;
  top: 0;
  min-height: 75px;
  padding: 0px 20px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

/** global class styling **/

div {
	position: relative;
	display: flex;
	justify-content: space-around;
	align-items: center;
}
	

@media (max-width: 650px) {
  nav {
    margin-top: 10px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 0 50px;
  }
  nav li {
    padding-bottom: 5px;
  }
}

nav > ul {
  width: 50vw;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  font-family: "Bebas Neue"; 
  font-size: 2rem;
	}
	
@media (max-width: 650px) {
  nav > ul {
    flex-direction: column;
	}
  }
  
  
/** } it was a fucking bracket issue!!!!!! **/

/** don't know why this isn't working 
#Service {
	display: flex;
	flex-direction: column;
	width: 90%;
	justify-content: space-around;
	padding: 50px;
}

**/

#services ul {
	display: flex;
	flex-direction: column;
	width: 90%;
	justify-content: space-around;
	padding: 50px;
}

